Fix scrollbar hit area overlapping other elements

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -179,6 +179,7 @@ a:active {
 	top: $header-height;
 	right: 0;
 	overflow: hidden;
+	pointer-events: none;
 
 	div {
 		display: flex;
